# agentic_group

./: AGENTS.md  Agentic_Code_Review_Architecture.md  Archiceture.md  PROJECT_NORTH_STAR.MD  agentic_stage1_review.txt  agentic_worktree.tgz  changes.diff  pyproject.toml  run_local.py
src/agentic/: local.py  models.py
src/agentic/frameworks/: council.py  dxo.py
src/agentic/providers/: local.py
src/agentic_decision_engine.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_models.py
